# p2p-chat

./: .gitignore  Cargo.toml  build.sh  dev-web.sh
docs/: diagram-architecture.mmd  diagram-mailbox-flow.mmd  diagram-message-flow.mmd  p2p-chat-cargo-toml.tex  p2p-chat-diagrams.tex  p2p-chat-files-overview.tex  p2p-chat-screenshots.tex  projekt-inzynierski.tex
src/: mailbox.rs  main.rs  network.rs  types.rs
src/app/: args.rs  client.rs  mailbox.rs  mod.rs  setup.rs
src/cli/: commands.rs  mod.rs
src/crypto/: hpke.rs  identity.rs  mod.rs  storage.rs
src/logging/: buffer.rs  collector.rs  mod.rs
src/net/: chat.rs  discovery.rs  mailbox.rs  mod.rs
src/network/: behaviour.rs  commands.rs  handle.rs  handlers.rs  message.rs  mod.rs
src/network/handlers/: chat.rs  discovery.rs  mailbox.rs  mod.rs  swarm.rs
src/network/layer/: builder.rs  mod.rs  providers.rs  runtime.rs  state.rs
src/storage/: friends.rs  history.rs  known_mailboxes.rs  mailbox.rs  mod.rs  outbox.rs  seen.rs
src/storage/mailbox/: mod.rs  operations.rs
src/sync/: backoff.rs  mod.rs  periodic.rs  retry.rs
src/sync/engine/: discovery.rs  events.rs  mailbox.rs  mod.rs  outbox.rs  performance.rs
src/ui/: action.rs  chat_mode.rs  completers.rs  event.rs  log_entry.rs  log_mode.rs  mod.rs  mode.rs  runner.rs  terminal.rs
src/ui/chat_mode/: input.rs  mod.rs  (+1 more)
src/web/: api.rs  mod.rs  websocket.rs
web-ui/: README.md  package-lock.json  package.json  vite.config.ts
web-ui/public/: frame.png~  overlay.png-autosave.kra  overlay.png~
web-ui/src/: App.vue  main.ts  peerBranding.ts
(+63 files in other folders)
