[package]
name = "p2p-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.53", features = ["tcp", "tokio", "noise", "yamux", "mdns", "kad", "request-response", "macros", "serde", "ping"] }
tokio = { version = "1.0", features = ["full"] }
sled = "0.34"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
rand_core = { version = "0.6", features = ["getrandom"] }
chacha20poly1305 = "0.10"
argon2 = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
rustyline = "14.0"
async-trait = "0.1"
reedline = "0.28"
crossterm = "0.27"
rand = "0.8"
futures = "0.3"
getrandom = "0.2"
sha2 = "0.10"
hex = "0.4"
colored = "2.0"
unicode-width = "0.1"
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
rust-embed = "8.0"
mime_guess = "2.0"